--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       </div>
       <div class="open-source-link">
         <p>
-          <a href="https://github.com/Li5hi/weather-app" target="_blank"
+          <a href="https://github.com/Lejla-dev/wheater-forecast" target="_blank"
             >Open-source code</a
           >
-          by Carolin Weinreuter
+          by Lejla Latic
         </p>
       </div>
     </div>
